--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
     font-family: 'Rubik';
-    padding: 0;
+    width: 1920px;
+    margin: 0;
+    margin: auto;
 }
 
-section {
-    width: 100%;
-    height: 1073px;
-}
+
 
 
 /* **** TOP SECTION **** */
@@ -14,6 +13,7 @@ section {
 .top-banner {
     background-image: url("images/header-bg.png");
     background-repeat: no-repeat;
+    height: 1073px;
 
 }
 
@@ -25,12 +25,12 @@ h1 {
 }
 
 h2 {
-    font-weight: 400;
+    font-weight: 500;
     padding: 15px 10px;
     font-size: 48px;
 }
 
-p {
+.p-class {
     padding: 25px 10px;
     line-height: 32px;
     text-align: justify;
@@ -82,4 +82,161 @@ p {
 
 .top-img {
     width: 90%;
+}
+
+
+
+/* **** Middle Section **** */
+
+
+.mid-banner {
+    background-image: url("images/biography-bg.png");
+    background-repeat: no-repeat;
+    height: 875px;
+}
+
+.mid-dec {
+    margin-top: 140px;
+}
+
+.mid-img {
+    padding-left: 80px;
+}
+
+
+
+/* **** WORK SECTION **** */
+
+.bottom-banner {
+    background-image: url("images/latest-work-bg.png");
+    background-repeat: no-repeat;
+    height: 1162px;
+}
+
+.work-title {
+    text-align: center;
+    padding: 40px 0;
+}
+
+
+.work-ad {
+    width: 25%;
+    float: left;
+    height: auto;
+    margin: 100px 0 0 25px;
+    box-shadow: 10px 10px 20px black;
+
+}
+
+.box1 {
+    margin-left: 180px;
+}
+
+.work-img {
+    width: 100%;
+    margin: 0;
+}
+
+
+.ad1 {
+    background-image: linear-gradient(45deg, rgb(196, 196, 243), rgb(164, 240, 240));
+    margin: 0;
+    padding: 20px 15px;
+    line-height: 28px;
+    text-align: justify;
+    font-weight: 500;
+
+}
+
+.ad2 {
+    background-image: linear-gradient(45deg, rgb(186, 248, 204), rgb(78, 248, 72));
+    margin: 0;
+    padding: 20px 15px;
+    line-height: 28px;
+    text-align: justify;
+    font-weight: 500;
+
+}
+
+.ad3 {
+    background-image: linear-gradient(45deg, rgb(231, 240, 188), rgb(232, 241, 103));
+    margin: 0;
+    padding: 20px 15px;
+    line-height: 28px;
+    text-align: justify;
+    font-weight: 500;
+
+}
+
+
+/* **** LINE **** */
+
+.line {
+    width: 1920px;
+    height: 4px;
+    background-image: linear-gradient(90deg, rgb(241, 241, 241), rgb(190, 245, 255));
+}
+
+
+
+
+/* **** FOOTER SECTION **** */
+
+.footer-sec {
+    text-align: center;
+    background-image: url("images/footer-bg.png");
+    height: 1197px;
+}
+
+.f-h2 {
+    padding-bottom: 75px;
+}
+
+.footer-div-1 {
+    padding: 75px 0;
+}
+
+
+.footer-div-2 {
+    padding-top: 30px;
+    padding: 50px 0;
+}
+
+
+.footer-p {
+    font-weight: 400;
+    font-size: 22px;
+    padding-top: 75px;
+
+}
+
+.footer-link {
+    text-decoration: none;
+}
+
+
+.box-model {
+    background-image: linear-gradient(-45deg, rgb(224, 112, 137), rgb(250, 150, 225));
+    color: aliceblue;
+    width: 700px;
+    height: 200px;
+    margin: auto;
+    border-radius: 10px;
+
+}
+
+.f-p-1 {
+    font-weight: 300;
+    font-size: 15px;
+    padding-top: 55px;
+
+}
+
+.f-p-2 {
+    font-weight: 500;
+    font-size: 22px;
+}
+
+.footer-div {
+    margin-top: 230px;
 }
